# FileXSorter

./: .gitignore  Cargo.toml  README.md  plan.md  roadmap.md
src/: app.rs  file_ops.rs  main.rs  scanner.rs
