[package]
name = "file_x_sorter"
version = "0.3.0"
edition = "2021"
authors = ["Ivan Ryukendo"]
description = "A lightweight Windows file duplicate detection and sorting tool"
license = "MIT"

[[bin]]
name = "file-x-sorter"
path = "src/main.rs"

[dependencies]
# GUI Framework
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["all_loaders", "image"] }

# Image loading
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "ico", "webp"] }

# File dialogs
rfd = "0.15"

# Hashing
sha2 = "0.10"

# Parallel processing
rayon = "1.10"

# Directory traversal
walkdir = "2.5"

# Common paths
dirs = "5.0"

# Serialization for persistence
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Open files/folders in system explorer
open = "5.0"

# Date/time formatting
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
